Fixes z-index

--- a/app/assets/css/desktop.less
+++ b/app/assets/css/desktop.less
@@ -21,6 +21,7 @@
   white-space: nowrap;
   .transition(0.25s ease-out opacity);
   overflow: auto;
+  z-index: 19999;
   &:after{
     content: '';
     vertical-align: middle;
